# plonk

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  analysis_disc.py  analysis_disc_plot.py  arrays.py  disc_00000.ascii.REMOVED.git-id  do_analysis_disc.py  dump.py  environment.yml  header.py  input.py  itypes.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  splash.f90  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
conda/: build.sh  meta.yaml
docs/: conf.py  contributions.rst  environment.yml  examples.rst  getting-started.rst  index.rst  installation.rst  overview.rst  requirements.txt  usage.rst
docs/_static/: deviation_from_keplerian.png.REMOVED.git-id  part.csv  sink.csv
docs/paper/: paper.bib  paper.md
docs/source/: api.md  api.rst  conf.py  examples.rst  getting-help.rst  getting-started.md  getting-started.rst  index.md  index.rst  installation.md  installation.rst  overview.md  overview.rst  plonk.analysis.rst  plonk.simulation.rst  plonk.snap.readers.rst  plonk.snap.rst  plonk.utils.rst  plonk.visualize.rst  quickstart.rst  usage.analysis.md  usage.analysis.rst  usage.data.rst  (+4 more)
examples/: Makefile  README.md  analyze_disc.py  disc.ipynb  do_analysis_disc.py  splash.py  tutorial.ipynb  tutorial.md  visualize_disc.py
plonk/: ParticleData.py  PhantomDump.py  SinkData.py  __init__.py  _config.py  _logging.py  _units.py  analysis_disc.py  arrays.py  config.toml  constants.py  do_analysis_disc.py  dump.py  dumps.py  energy.py  evolution.py  header.py  parameters.py  particles.py  simulation.py  sink.py  sinks.py  units.py  utils.py
splash/: Makefile  libsplash.c  libsplash.f90  libsplash.pxd  libsplash.pyx  splash.c  splash.pyx
tests/: mocks.py  test_analysis.py  test_animation.py  test_arrays.py  test_dump.py  test_evolution.py  test_interpolation.py  test_multiplot.py  test_profile.py  test_simulation.py  test_snap.py  test_sph.py  test_time_series.py  test_units.py  test_utils.py  test_visualization.py
(+222 files in other folders)
