[metadata]
name = plonk
version = 0.6.1
author = Daniel Mentiplay
author_email = d.mentiplay@gmail.com
license = MIT
url = https://github.com/dmentipl/plonk
description = Smoothed particle hydrodynamics analysis and visualization with Python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
install_requires =
    h5py
    matplotlib
    numba
    numpy
    pandas
    pint>=0.10.1
    scipy
